--- a/CarLicense.html
+++ b/CarLicense.html
@@ -36,7 +36,7 @@
 				</span>
 				<span>　</span>
 				<span>
-					<a href="https://t.me/joinchat/https://t.me/joinchat/OKD4XAvmhlkyJ8fEOyQshg"><img src="assets/img/button/報料.png" class="TopicButton"></a>
+					<a href="https://t.me/joinchat/https://t.me/joinchat/OKD4XAvmhlkyJ8fEOyQshg"><img src="assets/img/Button/報料.png" class="TopicButton"></a>
 				</span>
 			</div>
 	</div>
