--- a/index.html
+++ b/index.html
@@ -40,6 +40,65 @@
 						</h4>
 					</div>	
 
+					<div id="FooterContact" class="col-md-3 col-12">
+						<h5>Menu</h5>
+						<br>
+						<div class="FooterLink">
+							<a href="index.html">- Home</a>
+							<br><br>
+							<a href="action.html">- Events</a>
+							<br><br>
+							<a href="gallery.html">- Gallery</a>　
+							<br><br>
+							<a href="car_number.html">- CarLicense</a>
+							<br><br>
+							<a href="escapepwd.html">- Escapepwd</a>　
+							<br><br>
+							<a href="Timeline.html">- Timeline</a>							
+							<br><br>
+							<a href="stmap.html">- Strategic map</a>　
+							<br><br>
+							<a href="strategy.html">- Strategy</a>							
+							<br><br>
+							<a href="statement.html">- Statement</a>　
+							<br><br>
+						</div>
+						<br>
+
+
+
+					</div>
+
+					<div id="FooterQR" class="col-md-3 col-12">
+						<h5>Contact</h5>
+						<div class="FooterIcon" style="text-align: left;">
+
+							<span class="fa-stack fa-2x">
+								<a href="https://twitter.com/HkRestart" target="_blank">
+									  <i class="fas fa-square fa-stack-2x" style="color:#fff"></i>
+									  <i class="fab fa-twitter fa-stack-1x" style="color:#000"></i>
+								</a>
+								</span>
+								<span class="fa-stack fa-2x">
+								<a href="https://t.me/joinchat/OKD4XBN6pdgeuvFXY724Ug" target="_blank">
+									  <i class="fas fa-square fa-stack-2x" style="color:#fff"></i>
+									  <i class="fab fa-telegram-plane fa-stack-1x" style="color:#000"></i>
+								</a>
+								</span>
+								<span class="fa-stack fa-2x">
+								<a href="#home">
+									  <i class="fas fa-square fa-stack-2x" style="color:#fff"></i>
+									  <i class="fab fa-facebook-f fa-stack-1x" style="color:#000"></i>
+								</a>
+								</span>	
+
+						</div>
+							<br>
+						<h5>QR Code</h5>
+						<div style="text-align: left; margin-left: -5px;">
+							<img src="assets/img/Button/RestartHK.png" style="width: 150px;">
+						</div>
+					</div>
 
 			</div>
 		</div>
