--- a/CarLicense.html
+++ b/CarLicense.html
@@ -34,7 +34,7 @@
 			</div>
 			<div>
 				<span>
-					<a href="#Footer"><img src="assets/img/Button/搜尋.png" class="TopicButton"></a>
+					<a href="#SearchBody"><img src="assets/img/Button/搜尋.png" class="TopicButton"></a>
 				</span>
 				<span>　</span>
 				<span>
