--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 	<!------------------------------ NAV CSS ------------------------------->
 	<link href="css/mmenu/mmenu.css" rel="stylesheet" />
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link type="text/css" rel="stylesheet" href="css/mmenu/Nav.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link type="text/css" rel="stylesheet" href="css/mmenu/Nav.css" />
 	<!------------------------------ JS ------------------------------->
 
 
@@ -25,6 +25,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 
 
 </head>
