--- a/Comrade.html
+++ b/Comrade.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<title>Strategic Map</title>
+	<title>Comrade</title>
 	<!------------------------------ CSS ------------------------------->
 	<link rel="stylesheet" type="text/css" href="FontAwesome/css/all.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"></link>
 	<!------------------------------ BODY CSS ------------------------------->
-	<link rel="stylesheet" type="text/css" href="css/StMap.css">
+	<link rel="stylesheet" type="text/css" href="css/Comrade.css">
 	<link rel="stylesheet" type="text/css" href="css/Footer.css">
 	<!------------------------------ NAV CSS ------------------------------->
 	<link href="css/mmenu/mmenu.css" rel="stylesheet" />
@@ -144,13 +144,13 @@
 	<div id="TopicBanner">
 			<div class="Topic">
 				<hr class="UnderLineW">
-				<h1>STRATEGIC MAP</h1>
+				<h1>COMRADE</h1>
 				<hr class="UnderLineW">
 			</div>
 				
 			<div class="TopicText">
-				<b>- 有見警方之包圍模式日漸轉變，抗爭者必需了解各區之地形資料 -<br>- 封路之可能性，以及逃生路線等情況 -<br></b>
-				<br>
+				<b>- 不能遺忘每一位戰友 -<br>- 請協助處理有關情報 -<br>- 以免被歷史埋沒 -</b>
+				<br><br>
 			</div>
 			<div>
 				<span>
@@ -163,100 +163,60 @@
 			</div>
 	</div>
 	<!------------------------------ BodyData ------------------------------->
-
-<!------------------------------ Location Icon ------------------------------->	
-	<div id="Location">
-		<div class="container" style="text-align: center; padding-top: 30px;">
-					<div class="row">
-						<br><br>
-						<!---------- 葵涌 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv1">
-							<a class="button"><img src="assets/img/Map/KwaiChung.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 馬鞍山 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv2">
-							<a class="button"><img src="assets/img/Map/maonshan.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 深水步 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv3">
-							<a class="button"><img src="assets/img/Map/shamshuipo.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 沙田 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv4">
-							<a class="button"><img src="assets/img/Map/shatin.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 黃大仙 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv5">
-							<a class="button"><img src="assets/img/Map/wongtaisin.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 元朗 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv6">
-							<a class="button"><img src="assets/img/Map/yuenlong.png" class="TapButton"></a>
-							</div>
-						</div>
-					</div>
-
-					<div class="row">
-						<!---------- 大埔 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv7">
-							<a class="button"><img src="assets/img/Map/taipo.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 荃灣 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv8">
-							<a class="button"><img src="assets/img/Map/tsuenwan.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 北角 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv9">
-							<a class="button"><img src="assets/img/Map/northpoint.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 金鍾 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv10">
-							<a class="button"><img src="assets/img/Map/Admiralty.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 中環 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv11">
-							<a class="button"><img src="assets/img/Map/Central.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 關閉 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="closediv">
-							<a class="button"><img src="assets/img/Map/close.png" class="TapButton"></a>
-							</div>
-						</div>
-					</div>				
+	<div id="Comrade-top">
+		<div class="container" style="text-align: center">
+			<div class="row">
+				<div class="col-md-12 col-12 PaddingDown">
+					<br>
+					<h1>R.I.P</h1>
+					<hr class="UnderLineW">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3 col-6 PaddingDown">
+					<img src="assets/img/Comrade/Shadow.jpg" class="GraP">
+					<br><br>
+					<h2>梁凌杰</h2>
+					<p>35歲</p>
+					<p>地點: <br>金鍾太古廣場
+					<br>日期: 2019年6月15日	
+					<br>事件: 反送中
+					<br>情況: 以死明志</p>
+				</div>
+				<div class="col-md-3 col-6 PaddingDown">
+					<img src="assets/img/Comrade/Shadow.jpg" class="GraP">
+					<br><br>
+					<h2>盧曉欣</h2>
+					<p>21歲</p>
+					<p>地點: <br>粉嶺嘉福邨福泰樓樓梯間
+					<br>日期: 2019年6月29日	
+					<br>事件: 反送中
+					<br>情況: 以死明志</p>
+				</div>
+				<div class="col-md-3 col-6 PaddingDown">
+					<img src="assets/img/Comrade/Shadow.jpg" class="GraP">
+					<br><br>
+					<h2>鄔小姐</h2>
+					<p>29歲</p>
+					<p>地點: <br>中環IFC民祥街天橋
+					<br>日期: 2019年6月30日
+					<br>事件: 反送中
+					<br>情況: 以死明志</p>
+				</div>
+				<div class="col-md-3 col-6 PaddingDown">
+					<img src="assets/img/Comrade/Shadow.jpg" class="GraP">
+					<br><br>
+					<h2>麥小姐</h2>
+					<p>28歲</p>
+					<p>地點: <br>青山道285至287號唐樓9樓天台
+					<br>日期: 2019年7月3日
+					<br>事件: 反送中
+					<br>情況: 以死明志</p>
+				</div>
+			</div>
 		</div>
+	</div>
 	</div>		
-<!------------------------------ Pop Up Div ------------------------------->	
-	<div id="div1" style="display:none">
-		<div class="KwaiChung">待開發中</div>
-	</div>
-	<div id="div2" style="display:none">
-		<div class="maonshan">待開發中</div>
-	</div>
-	<div id="div3" style="display:none">
-		<div class="shamshuipo">待開發中</div>
-	</div>
 
 		<!------------------------------ FOOTER ------------------------------->
 	<div id="Footer">
@@ -366,33 +326,13 @@
 	<script src="js/Nav.js"></script>
 	<!------------------------------ Script ------------------------------->
 	<script>
-	/* ------------------------ Scroll via Href ID--------------------------- */
+		/* ------------------------ Scroll via Href ID--------------------------- */
 		$('a[href*="#"]').on('click', function (e) {
 		    e.preventDefault();
 
 		    $('html, body').animate({
 		        scrollTop: $($(this).attr('href')).offset().top
 		    }, 500, 'linear');
-		});
-	/* ------------------------ Div Pop Up Control--------------------------- */
-		$(document).ready(function(){
-			$('#showdiv1').click(function(){
-			    $('div[id^=div]').hide();
-			    $('#div1').show();
-			});
-			$('#showdiv2').click(function(){
-			    $('div[id^=div]').hide();
-			    $('#div2').show();
-			});
-			$('#showdiv3').click(function(){
-			    $('div[id^=div]').hide();
-			    $('#div3').show();
-			});
-			$('#closediv').click(function(){
-			    $('#div1').hide();
-			    $('#div2').hide();
-			    $('#div3').hide();
-			});
 		});
 
 	</script>
