--- a/Regulation.html
+++ b/Regulation.html
@@ -13,6 +13,10 @@
 	<!------------------------------ BODY CSS ------------------------------->
 	<link rel="stylesheet" type="text/css" href="css/Regulation.css">
 	<link rel="stylesheet" type="text/css" href="css/Footer.css">
+	<!------------------------------ NAV CSS ------------------------------->
+	<link href="css/mmenu/mmenu.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="css/mmenu/Nav.css" />
 
 	<!------------------------------ JS ------------------------------->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -25,7 +29,121 @@
 	<!------------------------------ BODY ------------------------------->
 <body>
 	<!------------------------------ NAV ------------------------------->
-
+ <!-- The menu -->
+ <div id="TopNav">
+        <nav id="menu" class="NavfontS">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Comrade.html">Comrade</a></li>
+	                <li><span>TimeLine</span>
+	                    <ul>
+	                        <li><a href="Timeline.html">RestartHK</a></li>
+	                        <li><a href="https://tl.hkrev.info/en/">HKD Movement</a></li>
+	                        <li><a href="https://hkontheroad.org" target="_blank">hkontheroad</a></li>
+	                        <li><a href="https://hkrev.info/" target="_blank">Freedom-HI</a></li>
+	                        <li><a href="https://www.hk-timeline.com/" target="_blank">HK-Timeline</a></li>
+	                        <li><a href="https://www.hkdreamers.com/" target="_blank">HKDreamers</a></li>
+	                        <li><a href="https://www.tiki-toki.com/timeline/entry/1273579/Hong-Kong-Timeline/" target="_blank">香港淡奶工作窒</a></li>
+							<li><a href="https://activity.thenewslens.com/hk-extradition-law/?lang=en" target="_blank">The News Lens</a></li>
+	                    </ul>
+	                </li>
+	                <li><span>Checker</span>
+	                    <ul>
+	                        <li><a href="CarLicense.html">CarLicense</a></li>
+	                        <li><a href="BuildingPWD.html">Building Password</a></li>
+	                        <li><span>The team</span>
+	                            <ul>
+	                                <li><a href="/about/team/management">Management</a></li>
+	                                <li><a href="/about/team/sales">Sales</a></li>
+	                                <li><a href="/about/team/development">Development</a></li>
+	                            </ul>
+	                        </li>
+	                    </ul>
+	                </li>
+	                <li><span>Map</span>
+	                    <ul>
+	                        <li><a href="https://hkmap.live/" target="_blank">HKMap Live</a></li>
+	                        <li><a href="BuildingPWD.html">Building Password</a></li>
+	                        <li><span>The team</span>
+	                            <ul>
+	                                <li><a href="https://www.google.com/maps/d/u/0/viewer?mid=1UiDtBzI8MfZlLqDprhbxByutYaY9GdII&ll=22.31334295689398%2C114.19009360711254&z=14" target="_blank">親共 vs 真愛港商店地圖</a></li>
+	                                <li><a href="/about/team/sales">Sales</a></li>
+	                                <li><a href="/about/team/development">Development</a></li>
+	                            </ul>
+	                        </li>
+	                    </ul>
+	                </li>
+	                <li><span>DataBase</span>
+	                    <ul>
+	                        <li><a href="FuckingPolice.html">Police Data</a></li>
+	                        <!---<li><span>The team</span>
+	                            <ul>
+	                                <li><a href="/about/team/management">Management</a></li>
+	                                <li><a href="/about/team/sales">Sales</a></li>
+	                                <li><a href="/about/team/development">Development</a></li>
+	                            </ul>
+	                        </li>---->
+	                    </ul>
+	                </li>
+	                <li><span>Basic Knowledge</span>
+	                    <ul>
+	                        <li><a href="Equipment.html">Equipment</a></li>
+	                        <li><a href="SkillUpgrade.html">Skill Improve</a></li>
+	                        <li><a href="Security.html">Security</a></li>
+	                        <li><a href="IfCatch.html">Arrested</a></li>
+	                        <li><span>Coming Soonm</span>
+	                            <ul>
+	                                <li><a href="">Coming Soon</a></li>
+	                            </ul>
+	                        </li>
+	                    </ul>
+	                </li>
+	                <li><span>Telegram</span>
+	                    <ul>
+	                        <li><span>RestartHK</span>
+	                            <ul>
+	                                <li><a href="https://t.me/joinchat/AAAAAFkB8-T-HrTijkOICA">RestartHK - 公告</a></li>
+	                                <li><a href="https://t.me/joinchat/OKD4XBN6pdgeuvFXY724Ug">RestartHK - 公海聯絡</a></li>
+	                                <li><a href="https://t.me/joinchat/OKD4XBNJPvfPuFguwgrTSA">報料 - 文宣收集</a></li>
+	                                <li><a href="https://t.me/joinchat/OKD4XAvmhlkyJ8fEOyQshg">報料 - 車牌、密碼</a></li>
+	                                <li><a href="https://t.me/joinchat/OKD4XBDFoHAZEVmXDP1ODw">報料 - 影片收集</a></li>
+	                                <li><a href="https://t.me/joinchat/OKD4XBcEEshgCjO_7xi0dQ">報料 - 傷員及被捕跟進</a></li>
+	                                <li><a href="https://t.me/joinchat/OKD4XA_WoBXTZMNkCHVhtg">報料 - 聲明及聯署收集處</a></li>
+	                            </ul>
+	                        </li>
+	                        <li><span>信息系</span>
+	                            <ul>
+			                        <li><a href="https://t.me/scottscout">Scott Scout 認證哨兵消息主頻道</a></li>
+									<li><a href="https://t.me/reminder612">612 reminder</a></li>		                        
+			                    </ul>
+	                        </li>
+	                        <li><span>黑警系</span>
+	                            <ul>
+			                        <li><a href="https://t.me/Dadfindboy">老豆搵仔</a></li>
+			                        <li><a href="https://t.me/HKAntiBlack">香港反黑組🧟‍♀🧟‍♂</a></li>
+									<li><a href="https://t.me/thzforlisten2me">請聽我一言 心戰室</a></li>
+			                    </ul>
+	                        </li>
+	                        <li><span>逃生系</span>
+	                            <ul>
+			                        <li><a href="https://t.me/bignewsmaterial">大消物 (物資•車手•實況•失物)</a></li>
+			                        <li><a href="https://t.me/SportsDay727">7二易 老師出通告（禁secret chat）</a></li>
+			                    </ul>
+	                        </li>
+	                    </ul>
+	                </li>
+                <li><a href="Link.html">Social Media</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+               	<li><span>Ours Targets</span>
+	                	<ul>
+	                        <li><a href="Regulation.html">Regulation</a></li>
+	                        <li><a href="Translations.html">Translations</a></li>
+							<li><a href="Strategy.html">Strategy</a></li>
+	                    </ul>
+	                </li>
+            </ul>
+        </nav>
+</div>
 <!------------------------------ BodyDetail ------------------------------->
 	<!------------------------------ BodyHome ------------------------------->
 	<div id="TopicBanner">
@@ -112,7 +230,7 @@
 
 
 
-<!------------------------------ FOOTER ------------------------------->
+	<!------------------------------ FOOTER ------------------------------->
 	<div id="Footer">
 		
 		<div class="container">
@@ -131,10 +249,11 @@
 					</div>	
 
 					<div id="FooterContact" class="col-md-3 col-12">
-						<h5>Menu</h5>
+						<h5>Projects</h5>
 						<br>
 						<div class="FooterLink">
-							<a href="index.html">- Home</a>
+							- Coming Soon
+							<!---------	<a href="index.html">- Home</a>
 							<br><br>
 							<a href="action.html">- Events</a>
 							<br><br>
@@ -150,7 +269,7 @@
 							<br><br>
 							<a href="strategy.html">- Strategy</a>							
 							<br><br>
-							<a href="statement.html">- Statement</a>　
+							<a href="statement.html">- Statement</a>　---------->
 							<br><br>
 						</div>
 						<br>
@@ -203,7 +322,7 @@
 				</div>	
 
 				<div class="col-md-6 col-6" style="text-align: right">
-					<p>Powered by HongKongers</p>
+					<p>Powered HongKongers</p>
 				</div>
 
 			</div>
@@ -213,6 +332,11 @@
 
 
 <!------------------------------ Script ------------------------------->
+	<!------------------------------ NAV JS ------------------------------->
+	<script src="js/mmenu.js"></script>
+    <script src="js/mmenu.debugger.js"></script>
+	<script src="js/Nav.js"></script>
+	<!------------------------------ Script ------------------------------->
 	<script>
 	/* ------------------------ Scroll via Href ID--------------------------- */
 		$('a[href*="#"]').on('click', function (e) {
