--- a/Security.html
+++ b/Security.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<title>Strategic Map</title>
+	<title>Security</title>
 	<!------------------------------ CSS ------------------------------->
 	<link rel="stylesheet" type="text/css" href="FontAwesome/css/all.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"></link>
 	<!------------------------------ BODY CSS ------------------------------->
-	<link rel="stylesheet" type="text/css" href="css/StMap.css">
+	<link rel="stylesheet" type="text/css" href="css/Security.css">
 	<link rel="stylesheet" type="text/css" href="css/Footer.css">
 	<!------------------------------ NAV CSS ------------------------------->
 	<link href="css/mmenu/mmenu.css" rel="stylesheet" />
@@ -143,121 +143,139 @@
 	<!------------------------------ BodyHome ------------------------------->
 	<div id="TopicBanner">
 			<div class="Topic">
-				<hr class="UnderLineW">
-				<h1>STRATEGIC MAP</h1>
-				<hr class="UnderLineW">
+				<hr class="UnderLineWT">
+				<h1>SECURITY</h1>
+				<hr class="UnderLineWT">
 			</div>
 				
 			<div class="TopicText">
-				<b>- 有見警方之包圍模式日漸轉變，抗爭者必需了解各區之地形資料 -<br>- 封路之可能性，以及逃生路線等情況 -<br></b>
-				<br>
+				<b>- 由"[反送中]資訊安全情報"Group所提供既安全資料 -<br>- 基於種種不合理之網絡監控 -<br>
+					- 抗爭者必需擁有基本認知 -
+				</b>
+				<br><br>
 			</div>
 			<div>
 				<span>
-					<a href="#Footer"><img src="assets/img/button/搜尋.png" class="TopicButton"></a>
-				</span>
-				<span>　</span>
-				<span>
-					<a href="https://t.me/joinchat/https://t.me/joinchat/OKD4XAvmhlkyJ8fEOyQshg"><img src="assets/img/button/報料.png" class="TopicButton"></a>
+					<a href="#AppTopic"><img src="assets/img/Button/閱讀.png" class="TopicButton"></a>
 				</span>
 			</div>
 	</div>
-	<!------------------------------ BodyData ------------------------------->
+	<!------------------------------ AppTopic ------------------------------->
+	<div id="AppTopic">
+		<div class="container" style="text-align: center">
+			<br>
+			<div class="row PaddingDown">
 
-<!------------------------------ Location Icon ------------------------------->	
-	<div id="Location">
-		<div class="container" style="text-align: center; padding-top: 30px;">
-					<div class="row">
-						<br><br>
-						<!---------- 葵涌 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv1">
-							<a class="button"><img src="assets/img/Map/KwaiChung.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 馬鞍山 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv2">
-							<a class="button"><img src="assets/img/Map/maonshan.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 深水步 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv3">
-							<a class="button"><img src="assets/img/Map/shamshuipo.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 沙田 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv4">
-							<a class="button"><img src="assets/img/Map/shatin.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 黃大仙 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv5">
-							<a class="button"><img src="assets/img/Map/wongtaisin.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 元朗 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv6">
-							<a class="button"><img src="assets/img/Map/yuenlong.png" class="TapButton"></a>
-							</div>
-						</div>
-					</div>
+				<div class="col-md-2 col-4 PaddingDown">
+					<div id="showdiv1">
+						<a class="button"><button class="btn"><img src="assets/img/App/Whatsapp.png" class="AppIcon"><br><b></b>Whatsapp</button></a>
+					</div> 
+				</div>
 
-					<div class="row">
-						<!---------- 大埔 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv7">
-							<a class="button"><img src="assets/img/Map/taipo.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 荃灣 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv8">
-							<a class="button"><img src="assets/img/Map/tsuenwan.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 北角 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv9">
-							<a class="button"><img src="assets/img/Map/northpoint.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 金鍾 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv10">
-							<a class="button"><img src="assets/img/Map/Admiralty.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 中環 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="showdiv11">
-							<a class="button"><img src="assets/img/Map/Central.png" class="TapButton"></a>
-							</div>
-						</div>
-						<!---------- 關閉 ---------->
-						<div class="col-md-2 col-4 AreaPaddingDown">
-							<div id="closediv">
-							<a class="button"><img src="assets/img/Map/close.png" class="TapButton"></a>
-							</div>
-						</div>
-					</div>				
+				<div class="col-md-2 col-4 PaddingDown">
+					<div id="showdiv2">
+						<button class="btn"><img src="assets/img/App/Telegram.png" class="AppIcon"><br><b></b>Telegram</button>
+					</div> 
+				</div>
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv3">
+						<button class="btn"><img src="assets/img/App/Signal.png" class="AppIcon"><br><b></b>Signal</button>
+					</div> 
+				</div>
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv4">
+						<button class="btn"><img src="assets/img/App/ChatSecure.png" class="AppIcon"><br><b></b>ChatSecure</button>
+					</div> 
+				</div>
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv5">
+						<button class="btn"><img src="assets/img/App/OnionBrowser.png" class="AppIcon"><br><b></b>Onion</button>
+					</div> 
+				</div>
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv6">
+						<button class="btn"><img src="assets/img/App/IOS.png" class="AppIcon"><br><b></b>IOS</button>
+					</div> 
+				</div>
+
+			</div>
+
+			<div class="row">
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv7">
+						<button class="btn"><img src="assets/img/App/Android.png" class="AppIcon"><br><b></b>Android</button>
+					</div> 
+				</div>
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv8">
+						<button class="btn"><img src="assets/img/App/Windows.png" class="AppIcon"><br><b></b>Windows</button>
+					</div> 
+				</div>
+
+				<div class="col-md-2 col-4" class="PaddingDown">
+					<div id="showdiv9">
+						<button class="btn"><img src="assets/img/App/Email.png" class="AppIcon"><br><b></b>Email</button>
+					</div> 
+				</div>
+			</div>
 		</div>
-	</div>		
-<!------------------------------ Pop Up Div ------------------------------->	
-	<div id="div1" style="display:none">
-		<div class="KwaiChung">待開發中</div>
-	</div>
-	<div id="div2" style="display:none">
-		<div class="maonshan">待開發中</div>
-	</div>
-	<div id="div3" style="display:none">
-		<div class="shamshuipo">待開發中</div>
-	</div>
+	</div>	
 
+	<!------------------------------ BLOG ------------------------------->
+	<div id="AppBlog">
+<!------------------------------ wWhatAPP ------------------------------->
+		<div id="div1" style="display:none">
+			<div class="container">
+				<div class="row">
+					<div class="AppBlogLayout">
+						<br>
+						<h1>1.1 #WhatsApp</h1>
+						<hr class="UnderLineW">
+						<p>
+							WhatsApp 通訊模式為端對端加密，每個用家嘅手提電話會生成一對密鑰：Public Key 及 Private Key，係通訊之前，對話雙方會交換 Public Key，使用邊個 Public Key 加密之後嘅訊息，只能用同一對 Key 裡面嘅 Private Key 去解密，通訊模式上不存在安全問題。但由於 WhatsApp 係私有程式，原始碼並冇開放，並且東家 Facebook 曾多次承認向中共公司提供用戶數據，冇辦法保證 WhatsApp 真係冇將 Private Key 一齊 Upload 到伺服器上。在此‼️強烈不建議‼️使用 WhatsApp 傾反送中相關部署計劃，但日常使用係冇問題嘅。
+						</p>
+						<br>
+						<p><i><b>/ 使用 WhatsApp 嘅安全 Tips: /</b></i></p>
+						<br>
+						<h2>1.1.1 啟動二次認證密碼</h2>
+						<hr class="UnderLineW">
+						<p>
+							打開 WhatsApp，Setting>>Account>>Two-Step Verification，選擇 Enable，然後輸入 6 位數嘅 PIN Code，恢復電郵換屆建議選擇 Skip 跳過，如果唔可以保證電郵安全，就存在比人通過電郵解除嘅可能性。
+							開啟二次認證嘅作用係，防止班狗或者中共，通過 ISP 截取手提電話認證號碼，以達到登入任意用家嘅 WhatsApp 戶口，事實上通過 Osmocom 等開放原始碼嘅 SDR 程式，可以實現自行部署 GSM 基站，劫持周邊手提電話網路，都可以非常輕鬆實現截取訊息。
+						</p>
+							<br>
+						<h2>1.1.2 檢查會話情況</h2>
+						<hr class="UnderLineW">
+						<p>
+							打開 WhatsApp，Setting>>WhatsApp Web/Desktop，如果存在自己未曾登入嘅會話，請立刻將該會話登出，防止被他人截取通訊內容。
+						</p>
+							<br>
+						<h2>1.1.3 關閉消息記錄 Backup</h2>
+						<hr class="UnderLineW">
+						<p>
+							打開 WhatsApp，Setting>>Chat>>Chat Backup，將消息記錄 Backup 關閉，Android 用家 Backup 會上傳至 Google Driver，而 Apple 用家則會上傳至 iCloud，若唔可以保證 Google Account 及 Apple ID 嘅安全，就會增加通訊內容洩漏嘅風險
+						</p>	
+							<br>
+						<h2>1.1.4 緊急情況時應急措施</h2>
+						<hr class="UnderLineW">
+						<p>
+							立即 Delete 自己嘅 WhatsApp 戶口，打開 WhatsApp，Setting>>Account>>Delete My Account，⚠️注意，戶口 Delete 之後所有記錄將會丟失，請謹慎操作。
+						</p>	
+						<br><br><br>
+						<p style="text-align: right;">原文出處:<br><a href="https://t.me/securehk"><b>[反送中]資訊安全情報</b></a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!------------------------------ wWhatAPP ------------------------------->
+	</div>
 		<!------------------------------ FOOTER ------------------------------->
 	<div id="Footer">
 		
@@ -366,7 +384,7 @@
 	<script src="js/Nav.js"></script>
 	<!------------------------------ Script ------------------------------->
 	<script>
-	/* ------------------------ Scroll via Href ID--------------------------- */
+		/* ------------------------ Scroll via Href ID--------------------------- */
 		$('a[href*="#"]').on('click', function (e) {
 		    e.preventDefault();
 
@@ -374,27 +392,24 @@
 		        scrollTop: $($(this).attr('href')).offset().top
 		    }, 500, 'linear');
 		});
-	/* ------------------------ Div Pop Up Control--------------------------- */
+		/* ------------------------ Scroll via Href ID--------------------------- */
 		$(document).ready(function(){
+		/* ------------------------ Whatsapp--------------------------- */	
 			$('#showdiv1').click(function(){
 			    $('div[id^=div]').hide();
 			    $('#div1').show();
 			});
+		/* ------------------------ Whatsapp--------------------------- */	
 			$('#showdiv2').click(function(){
 			    $('div[id^=div]').hide();
 			    $('#div2').show();
 			});
+		/* ------------------------ Whatsapp--------------------------- */		
 			$('#showdiv3').click(function(){
 			    $('div[id^=div]').hide();
 			    $('#div3').show();
 			});
-			$('#closediv').click(function(){
-			    $('#div1').hide();
-			    $('#div2').hide();
-			    $('#div3').hide();
-			});
 		});
-
 	</script>
 
 </body>
