--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<!------------------------------ NAV CSS ------------------------------->
 	<link href="css/mmenu/mmenu.css" rel="stylesheet" />
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link type="text/css" rel="stylesheet" href="css/mmenu/Nav.css" />
 	<!------------------------------ JS ------------------------------->
 
@@ -25,6 +25,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
 
 
 </head>
@@ -34,7 +35,7 @@
 	<!------------------------------ NAV ------------------------------->
  <!-- The menu -->
  <div id="TopNav">
-        <nav id="menu">
+        <nav id="menu" class="NavfontS">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Comrade.html">Comrade</a></li>
@@ -78,7 +79,7 @@
 	                </li>
 	                <li><span>DataBase</span>
 	                    <ul>
-	                        <li><a href="">Police Records</a></li>
+	                        <li><a href="FuckingPolice.html">Police Data</a></li>
 	                        <!---<li><span>The team</span>
 	                            <ul>
 	                                <li><a href="/about/team/management">Management</a></li>
@@ -92,7 +93,7 @@
 	                    <ul>
 	                        <li><a href="Equipment.html">Equipment</a></li>
 	                        <li><a href="SkillUpgrade.html">Skill Improve</a></li>
-	                        <li><a href="Safety.html">Security</a></li>
+	                        <li><a href="Security.html">Security</a></li>
 	                        <li><a href="IfCatch.html">Arrested</a></li>
 	                        <li><span>Coming Soonm</span>
 	                            <ul>
@@ -218,6 +219,7 @@
 						<h5>Projects</h5>
 						<br>
 						<div class="FooterLink">
+							- Coming Soon
 							<!---------	<a href="index.html">- Home</a>
 							<br><br>
 							<a href="action.html">- Events</a>
@@ -287,7 +289,7 @@
 				</div>	
 
 				<div class="col-md-6 col-6" style="text-align: right">
-					<p>Powered by HongKongers</p>
+					<p>Powered HongKongers</p>
 				</div>
 
 			</div>
